🚧 fix letter-spacing

--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -8,7 +8,7 @@
   translate: -5px -5px;
   height: auto;
   font-size: 12px;
-  letter-spacing: 5px;
+  letter-spacing: 2px;
 }
 
 .footer a {
